examples/err-notlocal2.uc
f(){
    return 17;
}

main(){
    *f=10; // error: not a pointer

    return 0;
}